fix: Centered modal close button on mobile view.

--- a/src/components/popup/popup.styl
+++ b/src/components/popup/popup.styl
@@ -21,12 +21,12 @@
 		background-color #fff
 	&__exit
 		position absolute
+		top -15px
+		right -15px
 		width 30px
 		height 30px
 		font-size 30px
 		line-height 30px
-		top -15px
-		right -15px
 	&__card,
 	&__paypal,
 	&__crypto	
@@ -53,4 +53,5 @@
 		&__wrap
 			margin-top 130px
 		&__exit
-			right 143px
+			right 50%
+			transform translateX(50%)
